src/main/default/objects/aforza__Invoice__c/aforza__Invoice__c.object-meta.xml
<CustomObject>
    <description>A summary of a customer&apos;s invoice information.</description>
    <label>Invoice</label>
    <nameField>
        <displayFormat>INV-{00000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>