src/main/default/objects/aforza__Invoice__c/fields/aforza__Account__c.field-meta.xml
<CustomField>
    <fullName>aforza__Account__c</fullName>
    <description>The account responsible for paying the invoice.</description>
    <inlineHelpText>The account responsible for paying the invoice.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Billing_Statements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>