src/main/default/objects/aforza__Invoice__c/fields/aforza__Status__c.field-meta.xml
<CustomField>
    <fullName>aforza__Status__c</fullName>
    <description>The current status of the invoice.</description>
    <inlineHelpText>The current status of the invoice.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Attempt Unsuccessful</fullName>
            </value>
            <value>
                <fullName>Approved for Payment</fullName>
                <default>true</default>
                <label>Approved for Payment</label>
            </value>
            <value>
                <fullName>Cash in Transit</fullName>
            </value>
            <value>
                <fullName>Paid in Full</fullName>
            </value>
            <value>
                <fullName>Outstanding</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Paid</fullName>
                <isActive>false</isActive>
                <label>Paid</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>true</isActive>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>