src/main/default/objects/aforza__Invoice__c/fields/AgeDebt__c.field-meta.xml
<CustomField>
    <fullName>AgeDebt__c</fullName>
    <description>Field to calculate how many days have passed since the due date (for overdue invoices).</description>
    <formula>IF(aforza__Due_Date__c &lt; TODAY() &amp;&amp; NOT(ISPICKVAL(aforza__Status__c, &apos;Paid&apos;)), TODAY() - aforza__Due_Date__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age Debt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>