src/main/default/objects/aforza__Invoice__c/fields/BillToAddress__c.field-meta.xml
<CustomField>
    <fullName>BillToAddress__c</fullName>
    <label>Bill To Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>