src/main/default/objects/aforza__Invoice__c/fields/BillToArea__c.field-meta.xml
<CustomField>
    <fullName>BillToArea__c</fullName>
    <label>Bill To Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>