src/main/default/objects/aforza__Invoice__c/fields/BillToCountry__c.field-meta.xml
<CustomField>
    <fullName>BillToCountry__c</fullName>
    <label>Bill To Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>