src/main/default/objects/aforza__Invoice__c/fields/BillToPostcode__c.field-meta.xml
<CustomField>
    <fullName>BillToPostcode__c</fullName>
    <label>Bill To Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>