src/main/default/objects/aforza__Invoice__c/fields/BillToReference__c.field-meta.xml
<CustomField>
    <fullName>BillToReference__c</fullName>
    <label>Bill To Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>