src/main/default/objects/aforza__Invoice__c/fields/BillToTown__c.field-meta.xml
<CustomField>
    <fullName>BillToTown__c</fullName>
    <label>Bill To Town</label>
    <length>255</length>
    <type>Text</type>
</CustomField>