src/main/default/objects/aforza__Invoice__c/fields/CreditCardPaymentTaken__c.field-meta.xml
<CustomField>
    <fullName>CreditCardPaymentTaken__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If check, a Credit Card payment has been captured in the event a Direct Debit or Bacs payment has failed.</inlineHelpText>
    <label>Credit Card Payment Taken?</label>
    <type>Checkbox</type>
</CustomField>