src/main/default/objects/aforza__Invoice__c/fields/CustomerShopNumber__c.field-meta.xml
<CustomField>
    <fullName>CustomerShopNumber__c</fullName>
    <label>Customer Shop Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>