src/main/default/objects/aforza__Invoice__c/fields/DiscountTotal__c.field-meta.xml
<CustomField>
    <fullName>DiscountTotal__c</fullName>
    <label>Discount Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>