src/main/default/objects/aforza__Invoice__c/fields/DpAddress__c.field-meta.xml
<CustomField>
    <fullName>DpAddress__c</fullName>
    <label>DP Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>