src/main/default/objects/aforza__Invoice__c/fields/DpArea__c.field-meta.xml
<CustomField>
    <fullName>DpArea__c</fullName>
    <label>DP Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>