src/main/default/objects/aforza__Invoice__c/fields/DpCountry__c.field-meta.xml
<CustomField>
    <fullName>DpCountry__c</fullName>
    <label>DP Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>