src/main/default/objects/aforza__Invoice__c/fields/DpName__c.field-meta.xml
<CustomField>
    <fullName>DpName__c</fullName>
    <label>DP Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>