src/main/default/objects/aforza__Invoice__c/fields/DpPostcode__c.field-meta.xml
<CustomField>
    <fullName>DpPostcode__c</fullName>
    <label>DP Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>