src/main/default/objects/aforza__Invoice__c/fields/DpReference__c.field-meta.xml
<CustomField>
    <fullName>DpReference__c</fullName>
    <label>DP Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>