src/main/default/objects/aforza__Invoice__c/fields/DpTown__c.field-meta.xml
<CustomField>
    <fullName>DpTown__c</fullName>
    <label>DP Town</label>
    <length>255</length>
    <type>Text</type>
</CustomField>