src/main/default/objects/aforza__Invoice__c/fields/Gross__c.field-meta.xml
<CustomField>
    <fullName>Gross__c</fullName>
    <label>Gross</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>