src/main/default/objects/aforza__Invoice__c/fields/InvoiceAmount__c.field-meta.xml
<CustomField>
    <fullName>InvoiceAmount__c</fullName>
    <formula>IF(ISBLANK( Gross__c ),  aforza__Amount_Due__c ,  Gross__c)</formula>
    <label>Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>