src/main/default/objects/aforza__Invoice__c/fields/InvoicePrinted__c.field-meta.xml
<CustomField>
    <fullName>InvoicePrinted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Printed?</label>
    <type>Checkbox</type>
</CustomField>