src/main/default/objects/aforza__Invoice__c/fields/InvoiceReadyForEvaluation__c.field-meta.xml
<CustomField>
    <fullName>InvoiceReadyForEvaluation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used when generating invoice mailing. Marking invoices as ready for evaluation. Ready means that all documents, payments are done and we have all info to evaluate if email should be sent.</description>
    <label>Invoice Ready For Evaluation</label>
    <type>Checkbox</type>
</CustomField>