src/main/default/objects/aforza__Invoice__c/fields/InvoiceSentToCustomer__c.field-meta.xml
<CustomField>
    <fullName>InvoiceSentToCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field populated by logic in code or flows when email was sent to customer.</description>
    <label>Invoice Sent To Customer</label>
    <type>Checkbox</type>
</CustomField>