src/main/default/objects/aforza__Invoice__c/fields/InvoiceType__c.field-meta.xml
<CustomField>
    <fullName>InvoiceType__c</fullName>
    <label>Invoice Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>InvoiceType</valueSetName>
    </valueSet>
</CustomField>