src/main/default/objects/aforza__Invoice__c/fields/LoadNumber__c.field-meta.xml
<CustomField>
    <fullName>LoadNumber__c</fullName>
    <label>Load Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>