src/main/default/objects/aforza__Invoice__c/fields/NetTotal__c.field-meta.xml
<CustomField>
    <fullName>NetTotal__c</fullName>
    <label>Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>