src/main/default/objects/aforza__Invoice__c/fields/Overdue__c.field-meta.xml
<CustomField>
    <fullName>Overdue__c</fullName>
    <formula>aforza__Due_Date__c &lt;  TODAY() &amp;&amp;  NOT(ISPICKVAL(aforza__Status__c, &apos;Paid&apos;))</formula>
    <label>Overdue</label>
    <type>Checkbox</type>
</CustomField>