src/main/default/objects/aforza__Invoice__c/fields/PaymentInstruction__c.field-meta.xml
<CustomField>
    <fullName>PaymentInstruction__c</fullName>
    <label>Payment Instruction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PaymentMethod</valueSetName>
    </valueSet>
</CustomField>