src/main/default/objects/aforza__Invoice__c/fields/PaymentLink__c.field-meta.xml
<CustomField>
    <fullName>PaymentLink__c</fullName>
    <inlineHelpText>This field is read only as it will be populated when an appropriate payment is created.</inlineHelpText>
    <label>Payment Link</label>
    <type>Url</type>
</CustomField>