src/main/default/objects/aforza__Invoice__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PaymentMethod</valueSetName>
    </valueSet>
</CustomField>