src/main/default/objects/aforza__Invoice__c/fields/PoNumber__c.field-meta.xml
<CustomField>
    <fullName>PoNumber__c</fullName>
    <label>Po Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>