src/main/default/objects/aforza__Invoice__c/fields/PrimaryContactName__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContactName__c</fullName>
    <label>Primary Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>