src/main/default/objects/aforza__Invoice__c/fields/PrintName__c.field-meta.xml
<CustomField>
    <fullName>PrintName__c</fullName>
    <label>Print Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>