src/main/default/objects/aforza__Invoice__c/fields/PushedToBI__c.field-meta.xml
<CustomField>
    <fullName>PushedToBI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated automatically via JDE System Integration.</description>
    <label>Pushed to BI?</label>
    <type>Checkbox</type>
</CustomField>