src/main/default/objects/aforza__Invoice__c/fields/PushedToEdi__c.field-meta.xml
<CustomField>
    <fullName>PushedToEdi__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated automatically via JDE System Integration.</description>
    <label>Pushed to EDI?</label>
    <type>Checkbox</type>
</CustomField>