src/main/default/objects/aforza__Invoice__c/fields/PushedtoJde__c.field-meta.xml
<CustomField>
    <fullName>PushedtoJde__c</fullName>
    <description>Updated automatically via JDE System Integration.</description>
    <defaultValue>false</defaultValue>
    <label>Pushed to JDE?</label>
    <type>Checkbox</type>
</CustomField>