src/main/default/objects/aforza__Invoice__c/fields/SiteNo__c.field-meta.xml
<CustomField>
    <fullName>SiteNo__c</fullName>
    <label>Site No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>