src/main/default/objects/aforza__Invoice__c/fields/SupplierReference__c.field-meta.xml
<CustomField>
    <fullName>SupplierReference__c</fullName>
    <label>Supplier Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>