src/main/default/objects/aforza__Invoice__c/fields/TAMCode__c.field-meta.xml
<CustomField>
    <fullName>TAMCode__c</fullName>
    <label>TAM Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>