src/main/default/objects/aforza__Invoice__c/fields/TotalQuantity__c.field-meta.xml
<CustomField>
    <fullName>TotalQuantity__c</fullName>
    <label>Total Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>