src/main/default/objects/aforza__Invoice__c/fields/Vat__c.field-meta.xml
<CustomField>
    <fullName>Vat__c</fullName>
    <label>VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>