src/main/default/objects/aforza__Invoice__c/listViews/aforza__All.listView-meta.xml
<ListView>
    <fullName>aforza__All</fullName>
    <columns>NAME</columns>
    <columns>aforza__Account__c</columns>
    <columns>aforza__Order__c</columns>
    <columns>aforza__Issued_Date__c</columns>
    <columns>aforza__Status__c</columns>
    <columns>aforza__Reference__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>